--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,10 @@
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
+    "allowJs": true,                                  /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */
+    "checkJs": true,                                  /* Enable error reporting in type-checked JavaScript files. */
+    "maxNodeModuleJsDepth": 5,
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
